tests/ui/consts/const-blocks/fn-call-in-non-const.stderr
error[E0277]: the trait bound `Bar: Copy` is not satisfied
  --> $DIR/fn-call-in-non-const.rs:14:32
   |
LL |     let _: [Option<Bar>; 2] = [no_copy(); 2];
   |                                ^^^^^^^^^ the trait `Copy` is not implemented for `Bar`
   |
   = note: required for `Option<Bar>` to implement `Copy`
   = note: the `Copy` trait is required because this value will be copied for each element of the array
   = help: consider creating a new `const` item and initializing it with the result of the function call to be used in the repeat position, like `const VAL: Type = const_fn();` and `let x = [VAL; 42];`
   = help: create an inline `const` block, see RFC #2920 <https://github.com/rust-lang/rfcs/pull/2920> for more information
help: consider annotating `Bar` with `#[derive(Copy)]`
   |
LL | #[derive(Copy)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
